Fix places dashboard alignment on mobile devices

--- a/client/src/styles/pages/_places-dashboard.scss
+++ b/client/src/styles/pages/_places-dashboard.scss
@@ -1,13 +1,13 @@
 .places-dashboard {
-	height: 100%;
+	min-height: 100%;
 	background-color: $light-color;
 
 	display: grid;
 	grid-template-rows: 1fr max-content;
-	grid-template-columns: 1fr max-content;
 	grid-template-areas: "places-map" "places-list";
 
 	@media (min-width: 992px) {
+		grid-template-columns: 1fr max-content;
 		grid-template-areas: "places-map places-list";
 	}
 
